# Real-Time-Analytics-Reporting-Platform

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
apps/api/: .env.production.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: api_keys.py  auth.py  dashboards.py  ingest.py  organizations.py
apps/api/app/core/: celery_app.py  config.py  errors.py  logging.py  middleware.py  permissions.py  security.py
apps/api/app/db/: base.py  session.py  types.py
apps/api/app/models/: __init__.py  api_key.py  dashboard.py  enums.py  event.py  organization.py  refresh_token.py  user.py
apps/api/app/repositories/: __init__.py  api_keys.py  dashboards.py  events.py  organizations.py  users.py
apps/api/app/schemas/: api_key.py  auth.py  common.py  dashboard.py  ingest.py  organization.py
apps/api/app/services/: api_keys.py  auth.py  dashboards.py  ingestion.py  organizations.py
apps/api/app/tasks/: ingestion.py
apps/api/scripts/: __init__.py  demo_data.py  live_smoke.py  seed.py  start_render.sh
apps/api/tests/: conftest.py  helpers.py  test_auth_and_rbac.py  test_ingestion_and_dashboards.py
apps/web/: .env.production.example  Dockerfile  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
docs/: API_GUIDE.md  DEPLOYMENT.md
(+32 files in other folders)
