[project]
name = "analytics-api"
version = "0.1.0"
description = "Production-style FastAPI backend for a multi-tenant analytics platform."
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "bcrypt>=4.0,<4.1",
  "celery[redis]>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.32",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.3"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["E501"]
"app/api/**/*.py" = ["B008"]
